Fixed word-wrap interfering with anchorFade
Fixed overlapping media width selectors causing a CSS issue at 805px. Added a link back to index from photos

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -74,10 +74,15 @@ a {
 	background: hsl(116, 80%, 45%);
 }
 
-#galleryTitle {
+#galleryTitle a {
 	color: #fff;
 	font-weight: 400;
 	font-size: 20px;
+}
+
+#galleryTitle a:hover, #galleryTitle a:focus {
+	text-decoration: underline;
+	color: #fff;
 }
 
 
